--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 }
 
 .header {
-  background: #dde5f3;
+  background: #a7b8d6;
     width: 100%;
     border-radius: 20px;
     margin: 5vh 0;
